--- a/api.html
+++ b/api.html
@@ -32,15 +32,37 @@
 
 			<div id="main">
 				<div class="header">
-					<h1>About</h1>
+					<h1>API</h1>
 				</div>
 
-				<div class="content" style="text-align: center">
-					<p>
-						Created by <a href="http://roblox.com/User.aspx?ID=2470023" target="_blank">Froast</a>.<br>
-						CSS is courtesy of <a href="http://purecss.io">purecss.io</a>. Specifically, the <a href="http://purecss.io/layouts/side-menu/">side menu layout</a>.<br>
-						This site's source is available at <a href="https://github.com/sentanos/rprxy">https://github.com/sentanos/rprxy</a>.
-					</p>
+				<div class="content" style="text-align: center"><br>
+					The base for all APIs is <a href="/proxy/api">/proxy/api</a>.<br>
+					<table class="pure-table pure-table-bordered">
+					    <thead>
+					        <tr>
+					            <th>Name</th>
+					            <th>Description</th>
+					            <th>Usage</th>
+					            <th>Example</th>
+					        </tr>
+					    </thead>
+
+					    <tbody>
+					        <tr>
+					            <td>Search Music</td>
+					            <td>Searches the catalog API for keyword</td>
+					            <td>GET /searchmusic/{keyword}</td>
+					            <td><a href="https://rprxy.xyz/proxy/api/searchmusic/rat%20twist">https://rprxy.xyz/proxy/api/searchmusic/rat%20twist</a></td>
+					        </tr>
+
+					        <tr>
+					            <td>Usernames From Identity</td>
+					            <td>Gets all usernames that a certain player has had before in order of newest to oldest</td>
+					            <td>GET /usernames/{userId}</td>
+					            <td><a href="https://rprxy.xyz/proxy/api/usernames/31342830">https://rprxy.xyz/proxy/api/usernames/31342830</a></td>
+					        </tr>
+					    </tbody>
+					</table>
 				</div>
 			</div>
 		</div>
