--- a/home.html
+++ b/home.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="A layout example with a side menu that hides on mobile, just like the Pure website.">
+		<meta name="description" content="An roblox/discord administartion system based on adonis.">
 
-			<title>Roblox Proxy and APIs</title>
+			<title>Promethe</title>
 
 		<link rel="stylesheet" href="css/pure-min.css">
 		<link rel="stylesheet" href="css/side-menu.css">
@@ -19,12 +19,12 @@
 
 			<div id="menu" style="width: 160px;">
 				<div class="pure-menu">
-					<a class="pure-menu-heading" href="/">RPRXY</a>
+					<a class="pure-menu-heading" href="/">Promethe</a>
 
 					<ul class="pure-menu-list">
 						<li class="pure-menu-item"><a href="/" class="pure-menu-link">Home</a></li>
-						<li class="pure-menu-item"><a href="/about.html" class="pure-menu-link">About</a></li>
-						<li class="pure-menu-item"><a href="/api.html" class="pure-menu-link">API</a></li>
+						<li class="pure-menu-item"><a href="about.html" class="pure-menu-link">About</a></li>
+						<li class="pure-menu-item"><a href="api.html" class="pure-menu-link">API</a></li>
 						<!--<li class="pure-menu-item"><a href="https://roblox.com/User.aspx?ID=2470023" target="_blank" class="pure-menu-link">Donate</a></li>-->
 					</ul>
 				</div>
@@ -32,19 +32,17 @@
 
 			<div id="main">
 				<div class="header">
-					<h1>Roblox Proxy and APIs</h1>
+					<h1>Promethe</h1>
 				</div>
 
 				<div class="content">
 					<h2 class="content-subhead">Quick About</h2>
 					<p>
-						This is an open-source roblox proxy for accessing roblox.com from in-game with HttpService, it also hosts some custom APIs.
+						This is an open-source roblox administartion system.
 					</p>
 					<h2 class="content-subhead">Usage</h2>
 					<p>
-						Just like roproxy, simply enter the roblox link you want to go to with roblox.com replaced to this domain.
-						For example, if you wanted to get user information by username: <a href="https://api.rprxy.xyz/users/get-by-username?username=Froast" target="_blank">https://api.rprxy.xyz/users/get-by-username?username=Froast</a>.
-						Subdomain support is managed manually: if there's a subdomain that isn't available you want me to add just let me know.
+						This is unfinished.
 					</p>
 				</div>
 			</div>
