--- a/about.html
+++ b/about.html
@@ -3,12 +3,12 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="A layout example with a side menu that hides on mobile, just like the Pure website.">
+		<meta name="description" content="An roblox/discord administartion system based on adonis.">
 
-			<title>Roblox Proxy and APIs</title>
+			<title>Promethe</title>
 
-		<link rel="stylesheet" href="/proxy/css/pure-min.css">
-		<link rel="stylesheet" href="/proxy/css/side-menu.css">
+		<link rel="stylesheet" href="css/pure-min.css">
+		<link rel="stylesheet" href="css/side-menu.css">
 	<body>
 		<div id="layout">
 			<!-- Menu toggle -->
@@ -19,13 +19,13 @@
 
 			<div id="menu" style="width: 160px;">
 				<div class="pure-menu">
-					<a class="pure-menu-heading" href="/">RPRXY</a>
+					<a class="pure-menu-heading" href="/">Promethe</a>
 
 					<ul class="pure-menu-list">
 						<li class="pure-menu-item"><a href="/" class="pure-menu-link">Home</a></li>
-						<li class="pure-menu-item"><a href="/proxy/about.html" class="pure-menu-link">About</a></li>
-						<li class="pure-menu-item"><a href="/proxy/api.html" class="pure-menu-link">API</a></li>
-						<!--<li class="pure-menu-item"><a href="https://roblox.com/User.aspx?ID=2470023" target="_blank" class="pure-menu-link">Donate</a></li>-->
+						<li class="pure-menu-item"><a href="about.html" class="pure-menu-link">About</a></li>
+						<li class="pure-menu-item"><a href="api.html" class="pure-menu-link">API</a></li>
+						
 					</ul>
 				</div>
 			</div>
@@ -37,13 +37,12 @@
 
 				<div class="content" style="text-align: center">
 					<p>
-						Created by <a href="http://roblox.com/User.aspx?ID=2470023" target="_blank">Froast</a>.<br>
+						Created by <a href="http://roblox.com/User.aspx?ID=1005920857" target="_blank">Ender</a>.<br>
 						CSS is courtesy of <a href="http://purecss.io">purecss.io</a>. Specifically, the <a href="http://purecss.io/layouts/side-menu/">side menu layout</a>.<br>
-						This site's source is available at <a href="https://github.com/sentanos/rprxy">https://github.com/sentanos/rprxy</a>.
 					</p>
 				</div>
 			</div>
 		</div>
-		<script src="/proxy/js/ui.js"></script>
+		<script src="js/ui.js"></script>
 	</body>
 </html>
