Update and rename api.html to suckmyfatnuts.html

--- a/suckmyfatnuts.html
+++ b/suckmyfatnuts.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="A layout example with a side menu that hides on mobile, just like the Pure website.">
+		<meta name="description" content="suck my massive fucking nuts">
 
-			<title>Roblox Proxy and APIs</title>
+			<title>Roblox fucking sucks/title>
 
 		<link rel="stylesheet" href="/proxy/css/pure-min.css">
 		<link rel="stylesheet" href="/proxy/css/side-menu.css">
